# Lustra_projekt

./: README.md
Lustra_Projekt_2.0/: Audio.cpp  Audio.h  BeamAction.h  CSVReader.cpp  CSVReader.h  Engine.cpp  Engine.h  Facing.h  LevelList.cpp  LevelList.h  Lustra_Projekt_2.0.rc  Lustra_Projekt_2.0.sln  Lustra_Projekt_2.0.vcxproj  Lustra_Projekt_2.0.vcxproj.filters  MO1_Emitter.cpp  MO1_Emitter.h  MO2_Collector.cpp  MO2_Collector.h  MO3_BasicMirror.cpp  MO3_BasicMirror.h  MO4_Wall.cpp  MO4_Wall.h  MO5_RetractableMirror.cpp  MO5_RetractableMirror.h  MO6_Tunnel.cpp  MO6_Tunnel.h  MO7_SwitchCollectorX.cpp  MO7_SwitchCollectorX.h  MO8_SwitchCollectorY.cpp  MO8_SwitchCollectorY.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  ObjectStrings.cpp  ObjectStrings.h  Sound.h  Window.cpp  Window.h  cpp.hint  (+3 more)
Lustra_Projekt_2.0/data/maps/: rules.txt
Lustra_Projekt_2.0/data/maps/1-10_basic/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
Lustra_Projekt_2.0/data/maps/11-20_collectors/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv
Lustra_projekt/: CMakeLists.txt
Lustra_projekt/src/: main.cpp
Lustra_projekt/src/csv_reader/: CSVReader.cpp  CSVReader.h  LevelList.cpp  LevelList.h
Lustra_projekt/src/csv_reader/data/: rules.txt
Lustra_projekt/src/csv_reader/data/1-10_basic/: 1.csv  2.csv  3.csv  4.csv
Lustra_projekt/src/engine/: Engine.cpp  Engine.h
Lustra_projekt/src/map/: Map.cpp  Map.h
Lustra_projekt/src/map/map_objects/: MO4_Wall.cpp  MapObject.cpp  MapObject.h
Lustra_projekt/src/map_objects/: Facing.h  MO1_Emitter.cpp  MO1_Emitter.h  MO2_Collector.cpp  MO2_Collector.h  MO3_BasicMirror.cpp  MO3_BasicMirror.h  MO4_Wall.h  MapObject.cpp  MapObject.h  test.cpp  test.h
Lustra_projekt/src/window/: Window.cpp  Window.h
Lustra_projekt_2.0/: Audio.cpp  Audio.h  BeamAction.h  CSVReader.cpp  CSVReader.h  Engine.cpp  Engine.h  Facing.h  LevelList.cpp  LevelList.h  Lustra_Projekt_2.0.aps  Lustra_Projekt_2.0.sln  Lustra_Projekt_2.0.vcxproj  Lustra_Projekt_2.0.vcxproj.filters  MO1_Emitter.cpp  MO1_Emitter.h  MO2_Collector.cpp  MO2_Collector.h  MO3_BasicMirror.cpp  MO3_BasicMirror.h  MO4_Wall.cpp  MO4_Wall.h  MO5_RetractableMirror.cpp  MO5_RetractableMirror.h  MO6_Tunnel.cpp  MO6_Tunnel.h  MO7_SwitchCollectorX.cpp  MO7_SwitchCollectorX.h  MO8_SwitchCollectorY.cpp  MO8_SwitchCollectorY.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  ObjectStrings.cpp  ObjectStrings.h  Sound.h  Window.cpp  Window.h  main.cpp  (+2 more)
Lustra_projekt_2.0/Debug/: Audio.sbr  CSVReader.sbr  LevelList.sbr  Lustra_Projekt_2.0.exe.recipe  Lustra_Projekt_2.0.vcxproj.FileListAbsolute.txt  MO1_Emitter.sbr  MO2_Collector.sbr  MO4_Wall.sbr  MO5_RetractableMirror.sbr  Map.sbr  MapObject.sbr  objectstrings.obj.enc  vc142.idb
Lustra_projekt_2.0/Debug/Lustra_P.8b523882.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lustra_Projekt_2.0.lastbuildstate  bscmake.command.1.tlog  bscmake.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lustra_projekt_2.0/Debug/data/maps/: rules.txt
Lustra_projekt_2.0/Debug/data/maps/1-10_basic/: 1.csv  10.csv  6.csv  8.csv
Lustra_projekt_2.0/Debug/data/maps/11-20_collectors/: 1.csv  2.csv  3.csv  4.csv  7.csv
Lustra_projekt_2.0/data/maps/1-10_basic/: 2.csv  3.csv  4.csv  5.csv  7.csv  9.csv
Lustra_projekt_2.0/data/maps/11-20_collectors/: 5.csv  6.csv
